infrastructure/openshift/ci/api-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ci
  name: api-ci
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: ci
    deploymentconfig: api-ci
  type: ClusterIP
