infrastructure/openshift/ci/redis-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ci
  name: redis-ci
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    name: redis-ci
  type: ClusterIP
