infrastructure/openshift/ci/api-Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ci
  name: api-ci
spec:
  host:
    valueFrom:
      secretKeyRef:
        key: uri
        name: myskills-api-uri
  port:
    targetPort: http
  to:
    kind: Service
    name: api-ci
    weight: 100
  wildcardPolicy: None
  tls:
    valueFrom:
      secretKeyRef:
        key: jtech.se.crt
        name: tls
    termination: edge
