infrastructure/openshift/ci/api.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: ci
  name: api-ci
spec:
  replicas: 1
  selector:
    app: ci
    deploymentconfig: api-ci
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: ci
        deploymentconfig: api-ci
    spec:
      containers:
        - env:
            - name: PORT
              value: "3000"
            - name: REDIS_API_HOST
              value: "redis-ci.myskills.svc"
            - name: REDIS_API_PORT
              value: "6379"
            - name: REDIS_API_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: redis-ci-password
            - name: MYDATA_OPERATOR
              value: "https://operator-ci.dev.services.jtech.se"
            - name: MYDATA_OPERATOR_PRIVATE_KEY
              valueFrom:
                secretKeyRef:
                  key: private.key
                  name: mydata-operator
            - name: MYDATA_OPERATOR_PUBLIC_KEY
              valueFrom:
                secretKeyRef:
                  key: public.key
                  name: mydata-operator
          image: api:latest
          imagePullPolicy: Always
          name: api-ci
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              memory: 400Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - api-ci
        from:
          kind: ImageStreamTag
          name: "api:latest"
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ci
  name: api-ci
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: ci
    deploymentconfig: api-ci
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ci
  name: api-ci
spec:
  host: api.myskills-ci.dev.services.jtech.se
  port:
    targetPort: http
  to:
    kind: Service
    name: api-ci
    weight: 100
  wildcardPolicy: None
  # tls:
  #   valueFrom:
  #     secretKeyRef:
  #       key: jtech.se.crt
  #       name: tls
  #   termination: edge
